# mni_autoreg

./: .cvsignore  .gitignore  .gitmodules  AUTHORS  BUGS  CHANGES  CMakeLists.txt  CONTACT  COPYING  COPYRIGHT  ChangeLog  FAQ  INSTALL  INSTALL.quick  Makefile  Makefile.am  Makefile.bottom  Makefile.include.in  NEWS  ORIGIN  OTHER_INFO  README  README.CVS  README.TESTING  TESTING  THANKS  TODO  VERSION  acconfig.h  acinclude.m4  autogen.sh  config.h.bot  config.h.cmake  config.h.in  configure  configure.ac  configure.in  epm-header.in  make_model  make_model.in  (+1 more)
Doc/: howto_add_obj_fn  howto_add_opt_fn
Proglib/: CMakeLists.txt  Makefile  Makefile.am  ParseArgv.c  ParseArgv.h  Proglib.h  def_tag_io.h  evaluate.c  get_history.c  history.c  history.h  louis_splines.h  minc_def.h  print_error.c  print_error.h  print_version.c  print_version.h  splines.h  tag_io.c  test.c  time_stamp.c  vax_conversions.c
Testing/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  linear-1  linear-2  linear-3  minc_wrapper.cmake  minctracc-linear  minctracc.bfgs1.cmake  minctracc.bfgs2.cmake  minctracc.test1.cmake  minctracc.test2.cmake  nonlinear-1  nonlinear-2  nonlinear-3  nonlinear-4  nonlinear-5  nonlinear-6  nonlinear-7  nonlinear-8  param2xfm.test.cmake  tps.tag  tps.xfm
cmake-modules/: FindLBFGS.cmake
make_phantom/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  make_phantom.c  make_phantom.h
mincbbox/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  mincbbox.c  mincbbox.h
mincblur/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  apodize_data.c  blur_support.c  blur_support.h  blur_volume.c  fft.c  gradient_volume.c  gradmag_volume.c  gradmag_volume.h  kernel.h  mincblur.c  mincblur.h  mincblur.man1
mincchamfer/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  chamfer.c  chamfer.h  dist.h  mincchamfer.c  mincchamfer.h  mincchamfer2.c
minctracc/: .CMakeLists.txt.BASE.91583.txt.swp  .CMakeLists.txt.LOCAL.91583.txt.swp  .CMakeLists.txt.REMOTE.91583.txt.swp  .cvsignore  CMakeLists.txt  CMakeLists.txt.REMOTE.91583.txt  CMakeLists.txt.orig  ChangeLog  Makefile  Makefile.am  VERSION  minctracc.1  minctracc.man1  todo
minctracc/Doc/: doc  minctracc.doc
minctracc/Extra_progs/: .cvsignore  Makefile.am  avg_voxel_vol.c  change_range.c  check_scale.c  cmpxfm.c  correct_sd_vol.c  crispify.c  def_to_lines.c  def_to_mag.c  def_to_scale.c  def_to_vols.c  deform_object.c  find_tubes.c  inbetween_def.c  inbetween_tps.c  load_vol.c  make_lvv_vol.c  make_zscore_vol.c  mst_to_lines.c  overlap_corr.c  param2xfm.c  param2xfm.tests  rand_param.c  random_def.c  random_vol.c  randomize_tags.c  randomize_volume.c  reversedef.c  rms_dist_lines.c  rms_dist_objects.c  scan_objects_to_volume.c  test.c  test_cov.c  test_cov_pr.c  test_deriv.c  test_eigen.c  test_kernels.c  test_lines.c  test_mripet.csh  (+8 more)
minctracc/Files/: Makefile.am  read_data_files.c
minctracc/Include/: amoeba.h  arg_data.h  boolean.h  constants.h  cov_to_praxes.h  def_segment_table.h  def_tag_io.h  def_tps.h  deform_field.h  deform_support.h  extras.h  globals.h  init_lattice.h  interpolation.h  libminctracc.h  libminctracc.h.orig  line_data.h  local_macros.h  make_rots.h  matrix_basics.h  minc.h  minctracc.h  minctracc.h.orig  minctracc_arg_data.h  minctracc_point_vector.h  netcdf.h  objectives.h  point_vector.h  procrustes.h  quad_max_fit.h  quaternion.h  recipes.h  rotmat_to_ang.h  segment_table.h  stats.h  sub_lattice.h  super_sample_def.h  vox_space.h
minctracc/Main/: .cvsignore  Makefile.am  debug_lines1.c  globaldefs.h  globaldefs.h.orig  make_matlab_data_file.c  measure_code.c  minctracc.c  minctracclib.c  minctracclib.c.orig
minctracc/Matlab/: avg.prof  blurdata.m  boxdata.m  brute.m  comments  comments.tex  corrdat.m  corrdata.m  cubic.m  cubic_p.m  cubic_pp.m  derivdat.m  differ.m  do_realwarp.m  do_test.m  do_warp.m  do_wrp.old  estderi2.m  estderiv.m  gold.m  int_like.m  inter.m  inter_1p.m  inter_2p.m  inter_p.m  make_fig.m  makedat2.m  makedata.m  makedata2.m  makeft.m  makekern.m  makeoffs.m  match.m  normdist.m  op_node.m  op_node.working  op_node.working2  plot_res.m  profile  profile2  (+10 more)
minctracc/Notes/: limited_fov
minctracc/Numerical/: Makefile.am  c2p.c  cov_to_praxes.c  default_def.c  init_params.c  make_rots.c  matrix_basics.c  procrustes.c  quad_max_fit.c  quaternion.c  random_numbers.c  rotmat_to_ang.c  stats.c  transformations.c
minctracc/Numerical/FROM_LIONEL/: fem.h  similar_correlate.c
minctracc/Numerical/Other_progs/: align_z.c  procrustes.c  transformations.c
minctracc/Old_defom_src/: golden.c  griddata.c  interpolation_stuff.c  mnbrak.c  nr_stuff.c  nrutil.c  params.h  read_data_files.c  readpoints.c  relative.h  writetrans.c
minctracc/Optimize/: 3d_surf_fit  Makefile.am  amoeba.c  amoeba2.c  d.c  def_obj_functions.c  deform_support.c  do_nonlinear.c  extras.c  louis_splines.h  m.c  my_grid_support.c  obj_fn_mutual_info.c  objectives.c  old_methods.c  optimize.c  quaternion.c  segment_table.c  sub_lattice.c  super_sample_def.c  switch_obj_func.c  vox_space.c
minctracc/Release_stubs/: deform_support.c  do_nonlinear.c  my_grid_support.c
minctracc/Test2/: Makefile
minctracc/Test_animal/: Makefile
minctracc/Testing/: Makefile
minctracc/Volume/: Makefile.am  init_lattice.c  interpolation.c  volume_functions.c
perl/: .cvsignore  CMakeLists.txt  ChangeLog  JobControl.pm  Makefile  Makefile.am  Startup.pm  autocrop.1  autocrop.in  autocrop.man1  build_perl_stuff  checkdir  file_utilities.pl  minc_utilities.pl  misc_utilities.pl  mritoself.1  mritoself.in  mritoself.man1  mritotal.1  mritotal.cfg.in  mritotal.default.cfg.in  mritotal.icbm.cfg.in  mritotal.in  mritotal.man1  numeric_utilities.pl  path_utilities.pl  string_utilities.pl  version.c  volume_heuristics.pl  xfmtool.in
