AUTOMAKE_OPTIONS = check-news

bin_SCRIPTS = make_model

SUBDIRS = \
        Proglib \
	make_phantom \
	mincbbox \
	mincblur \
	mincchamfer \
        minctracc \
        perl \
	Testing

EXTRA_DIST = BUGS FAQ INSTALL.quick ORIGIN TESTING \
	Doc/howto_add_obj_fn Doc/howto_add_opt_fn \
	make_model.in

